--- a/starter.css
+++ b/starter.css
@@ -15,7 +15,10 @@ body {
     font-family: 'Open Sans', sans-serif;
   
   }
+  title {
+    font-family: 'Open Sans', sans-serif;
 
+  }
 
   .btn-get-started {
     background: #ffffff;
